重点改应用程序的启动方式:"栓Q,JavaFX"